Changed styles Signed-off-by: Joar Wandborg <git@wandborg.com>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
   <title>jwandborg/cbstats @ GitHub</title>
 
+  <link rel="stylesheet" href="../css/style.css?v=2" media="screen,projection" />
   <style type="text/css">
     body {
       margin-top: 1.0em;
@@ -19,9 +20,9 @@
     h1 { font-size: 3.8em; color: #a37f00; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #a37f00; }
-    h3 { text-align: center; color: #a37f00; }
-    a { color: #a37f00; }
+    h2 { font-size: 1.5em; color: #000; }
+    h3 { text-align: center; color: #000; }
+    a { color: #000; background-color: #ffffb0; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
     pre { background: #000; color: #fff; padding: 15px;}
@@ -33,7 +34,7 @@
 <body>
   <a href="http://github.com/jwandborg/cbstats"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
-  <div id="container">
+  <div id="container" class="container">
 
     <div class="download">
       <a href="http://github.com/jwandborg/cbstats/zipball/master">
@@ -51,8 +52,6 @@
 
     <h2>Authors</h2>
 <p>Joar Wandborg (python@wandborg.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Joar (python@wandborg.com)<br/>      </p>
 
 
     <h2>Download</h2>
