--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <h2>Authors</h2>
-<p>Joar Wandborg (python@wandborg.com)<br/><br/>      </p>
+<p>Joar Wandborg, <a href="http://wandborg.se">http://wandborg.se</a><br/><br/>      </p>
 
 
     <h2>Download</h2>
